syntax = "proto3";

package v2ray.core.app.proxyman.command;
option csharp_namespace = "V2Ray.Core.App.Proxyman.Command";
option go_package = "github.com/v2fly/v2ray-core/v4/app/proxyman/command";
option java_package = "com.v2ray.core.app.proxyman.command";
option java_multiple_files = true;

import "common/protocol/user.proto";
import "common/serial/typed_message.proto";
import "config.proto";

message AddUserOperation {
  v2ray.core.common.protocol.User user = 1;
}

message RemoveUserOperation {
  string email = 1;
}

message AddInboundRequest {
  core.InboundHandlerConfig inbound = 1;
}

message AddInboundResponse {}

message RemoveInboundRequest {
  string tag = 1;
}

message RemoveInboundResponse {}

message AlterInboundRequest {
  string tag = 1;
  v2ray.core.common.serial.TypedMessage operation = 2;
}

message AlterInboundResponse {}

message AddOutboundRequest {
  core.OutboundHandlerConfig outbound = 1;
}

message AddOutboundResponse {}

message RemoveOutboundRequest {
  string tag = 1;
}

message RemoveOutboundResponse {}

message AlterOutboundRequest {
  string tag = 1;
  v2ray.core.common.serial.TypedMessage operation = 2;
}

message GetInboundConfRequest {
  string tag = 1;
}

message GetInboundConfResponse {
  core.InboundHandlerConfig inbound = 1;
}

message GetOutboundConfRequest {
  string tag = 1;
}

message GetOutboundConfResponse {
  core.OutboundHandlerConfig outbound = 1;
}

message ListInboundConfRequest {
  string prefix = 1;
}

message ListInboundConfResponse {
  repeated core.InboundHandlerConfig inbounds = 1;
}

message ListOutboundConfRequest {
  string prefix = 1;
}

message ListOutboundConfResponse {
  repeated  core.OutboundHandlerConfig outbounds = 1;
}

message AlterOutboundResponse {}

service HandlerService {
  rpc AddInbound(AddInboundRequest) returns (AddInboundResponse) {}

  rpc RemoveInbound(RemoveInboundRequest) returns (RemoveInboundResponse) {}

  rpc AlterInbound(AlterInboundRequest) returns (AlterInboundResponse) {}

  rpc AddOutbound(AddOutboundRequest) returns (AddOutboundResponse) {}

  rpc RemoveOutbound(RemoveOutboundRequest) returns (RemoveOutboundResponse) {}

  rpc AlterOutbound(AlterOutboundRequest) returns (AlterOutboundResponse) {}

  rpc GetInboundConf(GetInboundConfRequest) returns (GetInboundConfResponse) {}

  rpc GetOutboundConf(GetOutboundConfRequest) returns (GetOutboundConfResponse) {}

  rpc ListInboundConf(ListInboundConfRequest) returns (ListInboundConfResponse) {}

  rpc ListOutboundConf(ListOutboundConfRequest) returns (ListOutboundConfResponse) {}
}

message Config {}
